fixec text overflow problem on popups

--- a/app/assets/stylesheets/components/_cache_info.scss
+++ b/app/assets/stylesheets/components/_cache_info.scss
@@ -4,24 +4,34 @@
   text-decoration: none;
   font-family: $headers-font;
   border: none;
-
+  max-width: 150px;
+  // line-height: normal;
 }
 
-.popup-title:active {
-  transform: scale(0.98);
-  text-decoration: none;
-  color: $brown-cache-card-text;
-}
+// .popup-title:active {
+//   transform: scale(0.98);
+//   text-decoration: none;
+//   color: $brown-cache-card-text;
+//   font-size: smaller;
+// }
 
 .popup-username {
-  color: $green-dark;
+  color: $brown-cache-card-text;
   font-family: $body-font;
-  font-weight: bolder;
+  // font-weight: bolder;
+  font-size: smaller;
+  margin-bottom: 0;
 }
 
 .popup {
   display: flex;
   border-radius: 20px;
   // background: $beige-card-collection;
-  background-color: $brown-cache-card-text;
+  // background-color: $brown-cache-card-text;
+}
+
+.popup-species {
+  font-family: $body-font;
+  color: $green-dark;
+  text-align: center;
 }
